--- a/index.html
+++ b/index.html
@@ -3,28 +3,179 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shyamganesh's Portfolio</title>
+    <title>SG portfolio</title>
+    <meta name="description" content="Portfolio of Shyamganesh K.S., an aspiring embedded software engineer. Showcasing skills in C, Embedded C, communication protocols, and embedded systems development.">
+    <meta name="keywords" content="embedded software engineer, C, Embedded C, UART, I2C, SPI, CAN, TCP/IP, ARM, 8051, RTOS, portfolio, Shyamganesh K.S.">
+    <meta name="author" content="Shyamganesh K.S.">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Shyamganesh K.S. - Aspiring Embedded Software Engineer">
+    <meta property="og:description" content="Portfolio of Shyamganesh K.S., an aspiring embedded software engineer. Showcasing skills in C, Embedded C, communication protocols, and embedded systems development.">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Shyamganesh K.S. - Aspiring Embedded Software Engineer">
+    <meta name="twitter:description" content="Portfolio of Shyamganesh K.S., an aspiring embedded software engineer. Showcasing skills in C, Embedded C, communication protocols, and embedded systems development.">
+
+    <!-- Link external CSS file -->
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
-        <h1>Shyamganesh</h1>
+        <h1>SHYAM GANESH K S</h1>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About</a> |
-            <a href="projects.html">Projects</a> |
-            <a href="github.html">GitHub</a> |
-            <a href="contact.html">Contact</a>
+            <a href="#about">About</a> |
+            <a href="#skills">Skills</a> |
+            <a href="#projects">Projects</a> |
+            <a href="#github">GitHub</a> |
+            <a href="#certifications">Certifications</a> |
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
-    <section id="hero">
-        <h2>Aspiring Embedded Software Engineer</h2>
-        <p>Welcome to my portfolio! I am Shyamganesh, an aspiring embedded software engineer passionate about creating efficient and reliable solutions. Explore my projects and skills to learn more about my capabilities.</p>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>An Aspiring Embedded Software Engineer with entry-level experience in C/C++ programming and microcontrollers.  I'm passionate about creating efficient embedded solutions and enhancing hardware/software performance.  I'm eager to contribute my skills to a dynamic team and tackle challenging projects.</p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="skills-list">
+          <span class="skill">C</span>
+          <span class="skill">Embedded C</span>
+          <span class="skill">C++ (Beginner)</span>
+          <span class="skill">UART</span>
+          <span class="skill">I2C</span>
+          <span class="skill">SPI</span>
+          <span class="skill">CAN</span>
+          <span class="skill">TCP/IP</span>
+          <span class="skill">Keil IDE</span>
+          <span class="skill">VS Code</span>
+          <span class="skill">Arduino IDE</span>
+          <span class="skill">Keil-Debugger</span>
+          <span class="skill">Proteus</span>
+          <span class="skill">NI Multisim</span>
+          <span class="skill">DIA Lux</span>
+          <span class="skill">MATLAB</span>
+          <span class="skill">CANoe</span>
+          <span class="skill">ARM 7-Rhydolabz LPC2129</span>
+          <span class="skill">8051</span>
+          <span class="skill">Windows</span>
+          <span class="skill">Linux-Ubuntu</span>
+          <span class="skill">RTOS</span>
+          <span class="skill">Problem-Solving</span>
+          <span class="skill">Communication</span>
+          <span class="skill">Teamwork and Collaboration</span>
+          <span class="skill">Time Management and Organization</span>
+          <span class="skill">Leadership and Responsibility</span>
+          <span class="skill">Interpersonal Skills</span>
+        </div>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+
+        <div class="project">
+            <h3>Body Control Automation Using CAN</h3>
+            <p><strong>Problem:</strong> Traditional vehicle body functions (indicators, wipers) face wiring complexity and communication issues.</p>
+            <p><strong>Solution:</strong> Implemented CAN protocol for efficient and reliable communication with fault recovery and noise reduction.</p>
+            <p><strong>Implementation:</strong> Used four ARM-based boards with sensors, actuators, and CAN transceivers for seamless data transfer and real-time control. </p>
+            <p><strong>Key Technologies:</strong> ARM7 Microcontrollers, CAN protocol, Embedded C</p>
+            <p><strong>Code Snippet (Example - CAN):</strong></p>
+            <pre class="code-snippet">
+<code>void can1_init() 
+    {
+        VPBDIV = 1;                // PCLK = CCLK
+        PINSEL1 |= (1 << 18);      // P0.0 as RD1
+        PINSEL1 &= ~(1 << 19);     // P0.1 as TD1
+        C1MOD = 0x01;              // Enter Reset Mode
+        AFMR = 0x02;               // Bypass Filter Mode (Accept all messages)
+        C1BTR = 0x001C001D;        // 125 Kbps
+        C1MOD = 0x00;              // Normal Mode
+    }
+    
+void can1_tx(u32 id, u32 rtr, u32 dlc, u32 byteA, u32 byteB) 
+    {
+        C1TID1 = id;
+        C1TFI1 = (dlc << 16) | (rtr ? (1 << 30) : 0);
+        if (!rtr) {
+            C1TDA1 = byteA;
+            C1TDB1 = byteB;
+        }
+        C1CMR = (1 << 0) | (1 << 5);   // Start Transmission
+        while (!(C1SR & (1 << 3)));    // Wait for TX complete
+    }
+    
+void can1_rx(u32 *id, u32 *rtr, u32 *dlc, u32 *byteA, u32 *byteB) 
+    {
+        while (!(C1SR & 0x01));   // Wait for RX data
+        *id = C1RID;
+        *rtr = (C1RFS >> 30) & 1;
+        *dlc = (C1RFS >> 16) & 0xF;
+        *byteA = C1RDA;
+        *byteB = C1RDB;
+        C1CMR = (1 << 2);         // Release RX buffer
+    }
+</code>
+            </pre>
+            <a href="https://github.com/shyamganesh-ks/Body-Control-Using-CAN" class="button">View Project on GitHub</a>
+        </div>
+
+        <div class="project">
+            <h3>Automatic Coconut Farm Land Maintenance Rover</h3>
+            <p><strong>Problem:</strong> Traditional coconut farming relies on manual labor for weeding and herbicide spraying, leading to physical strain and health risks.</p>
+            <p><strong>Solution:</strong> An autonomous rover automates these tasks with precision, reducing labor and chemical exposure.</p>
+            <p><strong>Implementation:</strong> Equipped with ultrasonic sensors, a microcontroller-based motor system, and a 16Ah battery, the rover operates autonomously.</p>
+            <p><strong>Key Technologies:</strong> Arduino, Ultrasonic Sensors, Motor Control, Autonomous Navigation</p>
+        </div>
+
+        <div class="project">
+            <h3>Automation on Pulp Tank Monitoring and Water Jet Cutting System</h3>
+            <p><strong>Problem:</strong> Manual monitoring of pulp levels and water jet cutting in paperboard manufacturing causes inefficiencies.</p>
+            <p><strong>Solution:</strong> Automated system using an Arduino Uno for real-time monitoring, precise level control, and optimized cutting.</p>
+            <p><strong>Implementation:</strong> Ultrasonic sensors detect pulp levels, and Arduino controls the motor and water jet cutter.</p>
+            <p><strong>Key Technologies:</strong> Arduino Uno, Ultrasonic Sensors, Motor Control, Water Jet Cutting</p>
+        </div>
+
+    </section>
+
+    <section id="certifications">
+      <h2>Certifications</h2>
+      <div class="certification">
+        <h3>Advanced Course in Embedded System, Vector India Pvt. Ltd.</h3>
+        <p>Gained comprehensive knowledge and hands-on experience in embedded software and hardware development.</p>
+        <ul>
+          <li>Proficient in C and C++</li>
+          <li>Practical experience in 8-bit (8051) and 32-bit (ARM7 Rhydolabz LPC2129 board) microcontrollers.</li>
+          <li>Hands-on experience with UART, I2C, SPI, CAN, and TCP/IP socket programming.</li>
+          <li>Proficient in troubleshooting, debugging, and using tools like Keil.</li>
+          <li>Basic understanding of Linux (Ubuntu); proficient in using native compilers (GCC) for C and C++. Also experienced with cross-compilers like VS Code on Windows and Keil IDE for embedded development.</li>
+          <li>Introduction to RTOS fundamentals such as task scheduling, semaphores, mutexes, and inter-task communication.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="github">
+        <h2>GitHub</h2>
+        <p>Check out my projects and contributions on GitHub:</p>
+        <a href="https://github.com/shyamganesh-ks" class="button">shyamganesh-ks</a>
+        <a href="https://github.com/darkweb-lord" class="button">darkweb-lord</a>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: ksshyam03435@gmail.com</p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/shyamganeshks">linkedin.com/in/shyamganeshks</a></p>
+        <p>HackerRank: <a href="https://www.hackerrank.com/profile/shyamganeshks">hackerrank.com/profile/shyamganeshks</a></p>
     </section>
 
     <footer>
-        <p>&copy; 2025 Shyamganesh</p>
+        <p>&copy; 2025 Shyamganesh K.S.</p>
     </footer>
 </body>
 </html>
