--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ void can1_rx(u32 *id, u32 *rtr, u32 *dlc, u32 *byteA, u32 *byteB)
     </section>
 
     <footer>
-        <p>&copy; 2025 Shyamganesh K.S.</p>
+        <p>&copy; 2025 Shyamganesh</p>
     </footer>
 </body>
 </html>
